<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Space
        android:layout_width="match_parent"
        android:layout_height="119dp"
        android:layout_weight="0" />

    <LinearLayout
        android:id="@+id/lo_Nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_Nombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:text="@string/TextView_Nombre" />

        <EditText
            android:id="@+id/et_Nombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/Hint_InserteNombre"
            android:inputType="text"
            android:textColorHint="#000000" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lo_Sexo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_Sexo"
            android:layout_width="121dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:text="@string/TextView_Sexo" />

        <RadioGroup
            android:id="@+id/rg_Sexo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.6">

            <RadioButton
                android:id="@+id/rb_Hombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/RadioButton_Hombre" />

            <RadioButton
                android:id="@+id/rb_Mujer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/RadioButton_Mujer" />
        </RadioGroup>
    </LinearLayout>

    <ToggleButton
        android:id="@+id/tb_ActivarDesactivar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:text="@string/ToggleButton_ActivarDesactivar" />

    <Button
        android:id="@+id/b_Anadir"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:text="@string/Button_Anadir" />

    <Button
        android:id="@+id/b_MostrarLista"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:text="@string/Button_MostrarLista" />

    <ListView
        android:id="@+id/lv_DatosUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0" />

</LinearLayout>